Enable SI testcases

--- a/isa/Makefile
+++ b/isa/Makefile
@@ -92,7 +92,7 @@ $(eval $(call compile_template,rv64um,-march=rv64g -mabi=lp64))
 #$(eval $(call compile_template,rv64ua,-march=rv64g -mabi=lp64))
 #$(eval $(call compile_template,rv64uf,-march=rv64g -mabi=lp64))
 #$(eval $(call compile_template,rv64ud,-march=rv64g -mabi=lp64))
-#$(eval $(call compile_template,rv64si,-march=rv64g -mabi=lp64))
+$(eval $(call compile_template,rv64si,-march=rv64g -mabi=lp64))
 $(eval $(call compile_template,rv64mi,-march=rv64g -mabi=lp64))
 # endif
 
